fix: update POM